--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "webpack-stream": "5.2.1"
   },
   "scripts": {
-    "dist": "gulp dist",
+    "build": "gulp dist",
+    "prepublish": "npm run build",
     "clean": "gulp clean"
   }
 }
