--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   ],
   "author": "Dmitry Trofimov <dmitry.trofimov@jetbrains.com>",
   "license": "MIT",
-  "main": "lib/index.js",
-  "typings": "typings/index.d.ts",
+  "main": "dist/lib/index.js",
+  "types": "dist/typings/index.d.ts",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
     "access": "public"
